# zhunt

./: Dockerfile  Makefile  README.md  a.out  app.py  pBR322_z_score.txt  pyproject.toml  requirements-dev.txt  requirements.txt  zhun3.c  zhunt.html  zhunt3.c
Zmhuntv2/: Dockerfile  app.py  graphs.r
Zmhuntv2/src/: mhunt.c
Zmhuntv2/templates/: about.html  code.html  contact.html  downloads.html  index.html  layout.html  mhunt_downloads.html  mhunt_index.html
Zmhuntv2/test/data/: example_input0.fasta.Z-SCORE
docs/: zhunt.py
scripts/: example_run.sh  pBR322.txt  zhunt.py
scripts/templates/: done.html  downloads.html  index.html  layout.html
scripts/uploads/: test.txt  test.txt.Z-SCORE
src/: zhunt2.c  zhunt3.c
templates/: body.css  contact.html  downloads.html  index.html  layout.html  research.html
test/data/: example_input0.fasta
