[tool.poetry]
name = "zhunt"
version = "0.0.1"
description = ""
authors = ["Ethan Ho <ethan.n.ho@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
numpy = "^1.18.2"
pandas = "^1.0.3"
scipy = "^1.4.1"
cython = "^0.29.16"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
